# whereamifrom

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: lint.yml  release.yml
src/: main.rs
