[package]
name = "whereamifrom"
version = "0.1.0"
edition = "2021"
authors = ["nixargh <nixargh@protonmail.com>"]
license = "MIT"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/nixargh/whereamifrom"
repository = "https://github.com/nixargh/whereamifrom"
keywords = ["cli", "location"]
categories = ["command-line-utilities"]

[dependencies]
netdev = "0.32"
reqwest = { version = "0.11", features = ["blocking", "json"] }
openssl = { version = "0.10", features = ["vendored"] }
log = "0.4"
env_logger = "0.9"
