[package]
name = "whereamifrom"
version = "0.3.0"
edition = "2021"
authors = ["nixargh <nixargh@protonmail.com>"]
license = "MIT"
description = "A tool to detect country of your public IP"
readme = "README.md"
homepage = "https://github.com/nixargh/whereamifrom"
repository = "https://github.com/nixargh/whereamifrom"
keywords = ["cli", "location"]
categories = ["command-line-utilities"]

[dependencies]
netdev = "0.32"
reqwest = { version = "0.11", features = ["blocking", "json"] }
openssl = { version = "0.10", features = ["vendored"] }
log = "0.4"
env_logger = "0.9"
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
